@@ -2,7 +2,7 @@ sdparm (1.09-0.1) unstable; urgency=low
 
   * see ChangeLog
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sat, 23 Nov 2013 18:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Thu, 19 Dec 2013 12:00:00 -0500
 
 sdparm (1.08-0.1) unstable; urgency=low
 
